partman-partitioning (104) UNRELEASED; urgency=medium

  * Restore sensible architecture sorting in default_disk_label.

 -- Colin Watson <cjwatson@debian.org>  Sat, 30 Aug 2014 22:43:04 +0100

partman-partitioning (103) unstable; urgency=medium

  [ Updated translations ]
  * Danish (da.po) by Joe Hansen.

  [ Frederic Bonnard ]
  * Add ppc64el support.  Closes: #752444.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 17 Aug 2014 23:48:02 +0200

partman-partitioning (102) unstable; urgency=medium

  * Group Loongson 3A and 3B in the same loongson-3 subarchitecture.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 12 Jul 2014 17:08:15 +0200

partman-partitioning (101) unstable; urgency=low

  [ Phillip Susi ]
  * Remove partition copy operation for libparted 3 transition (closes:
    #738864).

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bosnian (bs.po) by Amila Valjevčić
  * Danish (da.po) by Joe Hansen
  * German (de.po) by Holger Wansing
  * Greek, Modern (1453-) (el.po) by galaxico
  * French (fr.po) by Christian Perrier
  * Croatian (hr.po) by Tomislav Krznar
  * Italian (it.po) by Milo Casagrande
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Changwoo Ryu
  * Bokmål, Norwegian (nb.po) by Hans Fredrik Nordhaug
  * Polish (pl.po) by Michał Kułach
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Ivan Masár
  * Thai (th.po) by Theppitak Karoonboonyananv
  * Turkish (tr.po) by Mert Diriki
  * Ukrainian (uk.po) by Anton Gladky

 -- Colin Watson <cjwatson@debian.org>  Sun, 06 Jul 2014 23:18:28 +0100

partman-partitioning (100) unstable; urgency=medium

  [ Updated translations ]
  * Hungarian (hu.po) by Judit Gyimesi

 -- Cyril Brulebois <kibi@debian.org>  Fri, 14 Mar 2014 18:48:35 +0100

partman-partitioning (99) unstable; urgency=low

  [ Updated translations ]
  * Tajik (tg.po) by Victor Ibragimov
