@@ -4,25 +4,26 @@
 
 ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
-# Add ntfsprogs-udeb for arches that have recent versions of windows.
+# Add ntfs-3g-udeb for arches that have recent versions of windows.
+# Perhaps this should be in partman-basicfilesystems instead ...
 FS_DEPENDS=
 ifeq ($(ARCH), i386)
-FS_DEPENDS=ntfsprogs-udeb
+FS_DEPENDS=ntfs-3g-udeb
 endif
 ifeq ($(ARCH), amd64)
-FS_DEPENDS=ntfsprogs-udeb
+FS_DEPENDS=ntfs-3g-udeb
 endif
 ifeq ($(ARCH), ia64)
-FS_DEPENDS=ntfsprogs-udeb
+FS_DEPENDS=ntfs-3g-udeb
 endif
 ifeq ($(ARCH), alpha)
-FS_DEPENDS=ntfsprogs-udeb
+FS_DEPENDS=ntfs-3g-udeb
 endif
 ifeq ($(ARCH), kfreebsd-i386)
-FS_DEPENDS=ntfsprogs-udeb
+FS_DEPENDS=ntfs-3g-udeb
 endif
 ifeq ($(ARCH), kfreebsd-amd64)
-FS_DEPENDS=ntfsprogs-udeb
+FS_DEPENDS=ntfs-3g-udeb
 endif
 
 override_dh_gencontrol:
